# VTT_DSA5

./: .gitignore  LICENSE.md  README.md  system.json  template.json
_code_gen/python/: Item_inserter.py  scrape_magic_actions.py
_code_gen/python/US/: __init__.py  db_builder.py  requirements.txt
_code_gen/rust/ulisses_scraper/: Cargo.toml
_code_gen/rust/ulisses_scraper/src/: main.rs
database/items/weapons/: melee.json
database/magic/magic_actions/: animist_forces.json  distorted_fairy_songs.json  fairy_songs.json  geod_rituals.json  magic_dance.json  magic_melodies.json  (+4 more)
lang/: en.json
python_utils/: Item_inserter.py  scrape_magic_actions.py
script/common/: dialog.js  handlebars.js  hooks.js  item.js  migration.js  roll.js
script/sheet/: acolyte.js  actor.js  ammunition.js  armour.js  critical-injury.js  cybernetic.js  drug.js  force-field.js  gear.js  malignancy.js  mental-disorder.js  mutation.js  npc.js  player.js  psychic-power.js  special-ability.js  talent.js  tool.js  trait.js  weapon-modification.js  weapon.js
style/chat/: chat.css
style/common/: helper.css
style/dialog/: dialog.css
style/sheet/: acolyte.css  actor.css  ammunition.css  armour.css  critical-injury.css  cybernetic.css  drug.css  force-field.css  gear.css  item.css  malignancy.css  mental-disorder.css  mutation.css  npc.css  psychic-power.css  special-ability.css  talent.css  tool.css  trait.css  weapon-modification.css  weapon.css
template/chat/: item.html  roll.html
template/dialog/: combat-roll.html  psychic-power-roll.html
template/sheet/: acolyte.html  npc.html
(+17 files in other folders)
